# paai

./: Makefile  README.md  docker-compose.yaml  docker-compose.yml  setup.sh  uninstall.sh
GENERATOR/: Dockerfile  pyproject.toml
GENERATOR/generator/: main.py  temp.py  temp2.py
GENERATOR/generator/api/v1/: generator_api.py
GENERATOR/generator/controller/: generator.py
GENERATOR/k8/: deployment.yaml  service.yaml
GENERATOR/tests/: test_generator.py
PAAI/: Dockerfile  pyproject.toml
PAAI/paai/: main.py
PAAI/paai/api/v1/: device_api.py
PAAI/paai/model/: barometer.py  device.py  device_message.py  heart_rate_meter.py
confluent/: Mongodb_sink.properties  check_mongo_alive.sh  docker-compose.yaml  docker-compose.yml
generator/: .env  pyproject.toml
generator/generator/: main.py  settings.py
generator/generator/api/v1/: __init__.py  generator_api.py
generator/generator/controller/: generator.py
mongo/: docker-compose.yml  mongo-init.js
paai/: .env  Dockerfile  pyproject.toml
paai/k8/: deployment.yaml  service.yaml
paai/paai/: main.py  settings.py
paai/paai/api/v1/: __init__.py  device_api.py  query_api.py
paai/paai/controller/: message_controller.py
paai/paai/controller/kafka/: aio_producer.py  kafka_controller.py
paai/paai/db/: basic_ops.py  db_settings.py  query_db.py
paai/paai/model/: __init__.py  device_message.py  hygrometer.py  measurement.py  query_datamodels.py  thermostat.py
paai/tests/: test_paai.py
paai/tests/unit/: device_raw_messages.py
spark/: Dockerfile  docker-compose.yml  pyspark_job.py
