[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["Pouria Faraji <pouria.faraji@ngs-sensors.it>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
